sgd/reproduction/playground/objects/SVMXC__Service_Order__c.object
<CustomObject>
    <fields>
        <fullName>SVMXC__SLA_Clock_Pause_Restart_Time__c</fullName>
        <label>SLA Clock Pause Restart Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Clock_Pause_Time__c</fullName>
        <label>SLA Clock Pause Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Clock_Paused__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SLA Clock Paused</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__SLA_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SLA Terms</description>
        <label>SLA Terms</label>
        <referenceTo>SVMXC__Service_Level__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Service_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Appointment_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Appointment Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SVMXC__SM_Appointment_Window__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Appointment Type</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>SVMXC__SM_Appointment_Window__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Capacity_Rule_Name__c</fullName>
        <description>Capacity Rule Name</description>
        <inlineHelpText>Capacity Rule Name</inlineHelpText>
        <label>Capacity Rule Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Crew_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates whether the work order is associated to a Crew or not.</description>
        <label>Crew Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Crew_Id__c</fullName>
        <description>The Id of the Crew.</description>
        <label>Crew Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Crew_Name__c</fullName>
        <description>The Name of the Crew to which this work order is assigned.</description>
        <label>Crew Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Estimated_Duration__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>This is original estimated or planned service duration in minutes. Original estimation may be derived from past history, MTTS rules etc.</description>
        <inlineHelpText>This is original estimated or planned service duration in minutes. Original estimation may be derived from past history, MTTS rules etc.</inlineHelpText>
        <label>Estimated Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_In_Jeopardy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates whether the Work Order is &apos;In Jeopardy&apos; of missing a fulfillment deadline or promise or not progressing per the plan or schedule. A value of &apos;True&apos; means the Work Order fulfillment status is &apos;At Risk&apos;.</description>
        <label>In Jeopardy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Integration_Source__c</fullName>
        <description>The record where it is created.</description>
        <label>Integration Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                    <default>true</default>
                    <label>Local</label>
                </value>
                <value>
                    <fullName>Remote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Is_Change_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to indicate whether the Work Order is created from the Change Order process.</description>
        <inlineHelpText>This field is used to indicate whether the Work Order is created from the Change Order process.</inlineHelpText>
        <label>Is FCO Work Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_LJS_Minimum_Schedule_Duration__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>This is the minimum duration of event to be scheduled when splitting a long duration work order.</description>
        <inlineHelpText>This is the minimum duration of event to be scheduled when splitting a long duration work order.</inlineHelpText>
        <label>LJS Minimum Schedule Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Life_Cycle_Status__c</fullName>
        <description>The status of the Event.</description>
        <label>Life Cycle Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Lock_Appointment_Schedule__c</fullName>
        <description>Dispatcher confirms the appointment to lock it to technician assignment or to the arrival window.</description>
        <inlineHelpText>Dispatcher confirms the appointment to lock it to technician assignment or to the arrival window.</inlineHelpText>
        <label>Lock Appointment Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lock in place</fullName>
                </value>
                <value>
                    <fullName>Lock to arrival window</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Multi_resource__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates whether the work order is assigned to multiple resources.</description>
        <label>Multi-resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Ok_To_Arrive_Early__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether &apos;Ok to arrive early&apos; option was selected for this work order in the Calendar View Manage Appointments screen, when it was sent to ServicePower for booking as an SLA job.</description>
        <inlineHelpText>Indicates whether &apos;Ok to arrive early&apos; option was selected for this work order in the Calendar View Manage Appointments screen, when it was sent to ServicePower for booking as an SLA job.</inlineHelpText>
        <label>Ok To Arrive Early</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Optimizer_Message_Creation_Date_Time__c</fullName>
        <description>This field is used to store the date and time of the message generated by the external optimization system that is successfully processed in ServiceMax . The date and time stamp is when the message was created by the external optimization system and sent to ServiceMax. (DO NOT USE, for future use only)</description>
        <label>Optimizer Message Creation Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_PM_Activity__c</fullName>
        <description>Formula field to get the configured Activity field from PM Plan</description>
        <formula>IF(SVMXC__Is_PM_Work_Order__c, TEXT(SVMXC__PM_Plan__r.SVMXC__SM_Adjustment_Activity_Date__c),null)</formula>
        <inlineHelpText>Formula field to get the configured Activity field from PM Plan</inlineHelpText>
        <label>PM Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Revised_Duration__c</fullName>
        <description>This is the current revised duration. Initially this is equal to the original estimated duration. This can constantly change due to supplemental service duration due to scope change and real time variances.</description>
        <formula>SVMXC__SM_Estimated_Duration__c + SVMXC__SM_Scope_Change__c + SVMXC__SM_Variance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the current revised duration. Initially this is equal to the original estimated duration. This can constantly change due to supplemental service duration due to scope change and real time variances.</inlineHelpText>
        <label>Revised Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_SLA_Initial_Response__c</fullName>
        <description>Number of minutes Configured in the SLA Rule for Initial Response.</description>
        <inlineHelpText>Number of minutes Configured in the SLA Rule for Initial Response.</inlineHelpText>
        <label>SLA Initial Response</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_SLA_Onsite_Response__c</fullName>
        <description>Number of minutes Configured in the SLA Rule for Onsite Response.</description>
        <inlineHelpText>Number of minutes Configured in the SLA Rule for Onsite Response.</inlineHelpText>
        <label>SLA Onsite Response</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_SLA_Resolution__c</fullName>
        <description>Number of minutes Configured in the SLA Rule for Resolution.</description>
        <inlineHelpText>Number of minutes Configured in the SLA Rule for Resolution.</inlineHelpText>
        <label>SLA Resolution</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_SLA_Restoration__c</fullName>
        <description>Number of minutes Configured in the SLA Rule for Restoration.</description>
        <inlineHelpText>Number of minutes Configured in the SLA Rule for Restoration.</inlineHelpText>
        <label>SLA Restoration</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Schedule_Violation_Penalty__c</fullName>
        <label>Schedule Violation Penalty</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Scheduled_Duration__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>This is the total of all the scheduled service duration for the work order. This is the sum of service duration from all the events for the work order.</description>
        <inlineHelpText>This is the total of all the scheduled service duration for the work order. This is the sum of service duration from all the events for the work order.</inlineHelpText>
        <label>Scheduled Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Scheduling_Options__c</fullName>
        <description>This is the Scheduling Option users can chose to update JDM fields and use LJS algorithm to split long lobs</description>
        <inlineHelpText>This is the Scheduling Option users can chose to update JDM fields and use LJS algorithm to split long lobs</inlineHelpText>
        <label>Scheduling Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>JDM and LJS Enabled</fullName>
                    <default>true</default>
                    <label>JDM and LJS Enabled</label>
                </value>
                <value>
                    <fullName>JDM Enabled, LJS Disabled</fullName>
                </value>
                <value>
                    <fullName>All options disabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Scope_Change__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>This is the supplemental service duration to the original estimated duration. This is due to scope change from the original estimation. Scope change along with variance is added to the original estimated duration to get the revised duration.</description>
        <inlineHelpText>This is the supplemental service duration to the original estimated duration. This is due to scope change from the original estimation. Scope change along with variance is added to the original estimated duration to get the revised duration.</inlineHelpText>
        <label>Scope Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Service_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Service Request</description>
        <inlineHelpText>Lookup to Service Request</inlineHelpText>
        <label>Service Request</label>
        <referenceTo>SVMXC__Service_Request__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Unscheduled_Duration__c</fullName>
        <description>This is the duration still unscheduled.</description>
        <formula>SVMXC__SM_Revised_Duration__c  -  SVMXC__SM_Scheduled_Duration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the duration still unscheduled.</inlineHelpText>
        <label>Unscheduled Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Variance__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>This is the supplemental service duration to the original estimated service duration. This deviation is due to ongoing changes from the original estimate. Ongoing Deviation Due to Variances along with scope change is added to the original estimated duration to get the revised service duration.</description>
        <inlineHelpText>This is the supplemental duration to the original estimated duration. This deviation is due to ongoing changes from the original estimate and due to Variances along with scope change is added to the original estimate duration to get the revised duration</inlineHelpText>
        <label>Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Version_Number__c</fullName>
        <description>This field increments by 1 for every mapped field update for Service Board to check conflicts and apply correct updates.</description>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Schedule_As_A_Dependent_Work_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schedule As Dependent Work Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Scheduled_Date_Time__c</fullName>
        <label>Scheduled Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Scheduled_Date__c</fullName>
        <description>Scheduled date for the work order</description>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Scheduling_Change_Token__c</fullName>
        <label>Scheduling Change Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Scheduling_Retry_Count__c</fullName>
        <description>Indicates the number of times the work order was sent to the scheduling optimizer for scheduling</description>
        <inlineHelpText>Indicates the number of times the work order was sent to the scheduling optimizer for scheduling</inlineHelpText>
        <label>Scheduling Retry Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Service/Maintenance Contract</description>
        <label>Service Contract</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Duration__c</fullName>
        <description>Duration in seconds required for the work order. Calculated from rules by OptiMax pre-calculation engine</description>
        <label>Service Duration (in Seconds)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the service group that is working on the service order.</description>
        <inlineHelpText>Name of the service group that is working on the service order.</inlineHelpText>
        <label>Service Team</label>
        <referenceTo>SVMXC__Service_Group__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Service_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Zone_ID__c</fullName>
        <description>Service zone for territory.</description>
        <label>Service Zone ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Skill_Set__c</fullName>
        <label>Skill Set</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Skill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Skill required to service the work order. Calculated by OptiMax pre-calculation engine</description>
        <label>Skill</label>
        <referenceTo>SVMXC__Skill__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Service_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Special_Instructions__c</fullName>
        <description>Relevant instructions for future service events for the same product/customer</description>
        <inlineHelpText>Relevant instructions for future service events for the same product/customer</inlineHelpText>
        <label>Special Instructions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Started_Driving_To_Location_Date_Time__c</fullName>
        <description>Date and time when technician starts driving towards the work order location</description>
        <inlineHelpText>Date and time when technician starts driving towards the work order location</inlineHelpText>
        <label>Started Driving To Location Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__State__c</fullName>
        <description>“State” part of the work order location</description>
        <inlineHelpText>“State” part of the work order location</inlineHelpText>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Street__c</fullName>
        <description>“Street” part of the work order location</description>
        <inlineHelpText>“Street” part of the work order location</inlineHelpText>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Sub_Status__c</fullName>
        <description>This field is used to capture the additional status information as part of work order closure.</description>
        <label>Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Unresolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Symptom__c</fullName>
        <description>Symptom that was noted before the failure.</description>
        <inlineHelpText>Symptom that was noted before the failure.</inlineHelpText>
        <label>Symptom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample Value1</fullName>
                </value>
                <value>
                    <fullName>Sample Value2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__TimeBetweenAssignAndSchedule__c</fullName>
        <description>Calculates the time taken for the work order to be scheduled after it was assigned</description>
        <formula>( SVMXC__FirstScheduledDateTime__c - SVMXC__First_Assigned_DateTime__c )*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the time taken for the work order to be scheduled after it was assigned</inlineHelpText>
        <label>Time Between Assign And Schedule</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__TimeBetweenQueueAndAssign__c</fullName>
        <description>Indicates the amount of time it took for the work order to be assigned after being queued</description>
        <formula>( SVMXC__First_Assigned_DateTime__c - SVMXC__First_Queued_DateTime__c )*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates the amount of time it took for the work order to be assigned after being queued</inlineHelpText>
        <label>Time Between Queue And Assign</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__TimeBetweenScheduleAndClose__c</fullName>
        <description>Indicates the amount of time it took for the work order to be closed after being scheduled</description>
        <formula>( SVMXC__Closed_On__c - SVMXC__FirstScheduledDateTime__c )*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates the amount of time it took for the work order to be closed after being scheduled</inlineHelpText>
        <label>Time Between Schedule And Close</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__TimeToAssign__c</fullName>
        <description>Indicates the amount of time it took for the work order to be assigned after being opened.</description>
        <formula>(SVMXC__First_Assigned_DateTime__c - CreatedDate )*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates the amount of time it took for the work order to be assigned after being opened.</inlineHelpText>
        <label>Time To Assign</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__TimeToQueue__c</fullName>
        <description>Indicates the amount of time it took for the work order to be queued after being created</description>
        <formula>(SVMXC__First_Queued_DateTime__c- CreatedDate)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates the amount of time it took for the work order to be queued after being created</inlineHelpText>
        <label>Time To Queue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__TimeToSchedule__c</fullName>
        <description>Indicates the amount of time it took for the work order to be scheduled after being opened</description>
        <formula>( SVMXC__FirstScheduledDateTime__c - CreatedDate )*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates the amount of time it took for the work order to be scheduled after being opened</inlineHelpText>
        <label>Time To Schedule</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_Between_Assign_And_Schedule_Bucket__c</fullName>
        <description>Time taken for the work order to be scheduled after it was assigned bucket. Used for reporting purpose</description>
        <formula>IF ( SVMXC__TimeBetweenAssignAndSchedule__c &lt;=2, &quot;Less Than 2 hours&quot;, IF ( SVMXC__TimeBetweenAssignAndSchedule__c &lt;= 6, &quot;2 To 6 hrs&quot;, IF ( SVMXC__TimeBetweenAssignAndSchedule__c &lt;= 10, &quot;6 to 10 hrs&quot;, &quot;Over 10 hrs&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time taken for the work order to be scheduled after it was assigned bucket. Used for reporting purpose</inlineHelpText>
        <label>Time Between Assign And Schedule Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_Between_Queue_And_Assign_Bucket__c</fullName>
        <description>Time taken for the work order to be assigned after it was queued bucket. Used for reporting purpose</description>
        <formula>IF (SVMXC__TimeBetweenQueueAndAssign__c &lt;=2, &quot;Less Than 2 hours&quot;, IF (SVMXC__TimeBetweenQueueAndAssign__c &lt;= 6, &quot;2 To 6 hours&quot;, IF (SVMXC__TimeBetweenQueueAndAssign__c &lt;= 10, &quot;6 to 10 hours&quot;, &quot;Over 10 hours&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time taken for the work order to be assigned after it was queued bucket. Used for reporting purpose</inlineHelpText>
        <label>Time Between Queue And Assign Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_Between_Schedule_And_Close_Bucket__c</fullName>
        <description>Time taken for the work order to be closed after it was scheduled bucket. Used for reporting purpose</description>
        <formula>IF (SVMXC__TimeBetweenScheduleAndClose__c &lt;=2, &quot;Less Than 2 hours&quot;, IF (SVMXC__TimeBetweenScheduleAndClose__c &lt;= 6, &quot;2 To 6 hours&quot;, IF (SVMXC__TimeBetweenScheduleAndClose__c &lt;= 10, &quot;6 to 10 hours&quot;, &quot;Over 10 hours&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time taken for the work order to be closed after it was scheduled bucket. Used for reporting purpose</inlineHelpText>
        <label>Time Between Schedule And Close Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_To_Close_c__c</fullName>
        <formula>( SVMXC__Closed_On__c - CreatedDate )*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to Close</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_to_Assign_Bucket__c</fullName>
        <description>Time taken for the work order to be assigned bucket. Used for reporting purpose</description>
        <formula>IF ( SVMXC__TimeToAssign__c &lt;=2, &quot;Less Than 2 hours&quot;, IF ( SVMXC__TimeToAssign__c &lt;= 6, &quot;2 To 6 hrs&quot;, IF ( SVMXC__TimeToAssign__c &lt;= 10, &quot;6 to 10 hrs&quot;, &quot;Over 10 hrs&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time taken for the work order to be assigned bucket. Used for reporting purpose</inlineHelpText>
        <label>Time to Assign Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_to_Initial_Response__c</fullName>
        <description>Time taken to initial response as per commitment in SLA.</description>
        <inlineHelpText>Time taken to initial response as per commitment in SLA.</inlineHelpText>
        <label>Time to Initial Response (in Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_to_Onsite_Response__c</fullName>
        <description>Time taken to onsite response as per commitment in SLA.</description>
        <inlineHelpText>Time taken to onsite response as per commitment in SLA.</inlineHelpText>
        <label>Time to Onsite Response (in Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_to_Queue_Bucket__c</fullName>
        <description>Time taken for the work order to be queued after it was opened bucket. Used for reporting purpose</description>
        <formula>IF ( SVMXC__TimeToQueue__c &lt;=2, &quot;Less Than 2 hours&quot;, IF ( SVMXC__TimeToQueue__c &lt;= 6, &quot;2 To 6 hrs&quot;, IF ( SVMXC__TimeToQueue__c &lt;= 10, &quot;6 to 10 hrs&quot;, &quot;Over 10 hrs&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time taken for the work order to be queued after it was opened bucket. Used for reporting purpose</inlineHelpText>
        <label>Time to Queue Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_to_Resolve__c</fullName>
        <description>Time taken to resolve as per commitment in SLA.</description>
        <inlineHelpText>Time taken to resolve as per commitment in SLA.</inlineHelpText>
        <label>Time to Resolve (in Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_to_Restore__c</fullName>
        <description>Time taken to restore as per commitment in SLA.</description>
        <inlineHelpText>Time taken to restore as per commitment in SLA.</inlineHelpText>
        <label>Time to Restore (in Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Time_to_Schedule_Bucket__c</fullName>
        <description>Time taken for the work order to be scheduled after it was opened bucket. Used for reporting purpose</description>
        <formula>IF (SVMXC__TimeToSchedule__c &lt;=2, &quot;Less Than 2 hours&quot;, IF (SVMXC__TimeToSchedule__c &lt;= 6, &quot;2 To 6 hours&quot;, IF (SVMXC__TimeToSchedule__c &lt;= 10, &quot;6 to 10 hours&quot;, &quot;Over 10 hours&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time taken for the work order to be scheduled after it was opened bucket. Used for reporting purpose</inlineHelpText>
        <label>Time to Schedule Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Top_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Serial number of the top-level installed product to which the component belongs. Is a lookup to an existing installed product record in ServiceMax.</description>
        <inlineHelpText>Serial number of the top-level installed product to which the component belongs. Is a lookup to an existing installed product record in ServiceMax.</inlineHelpText>
        <label>Top-Level</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipName>Service_Order_Top_Level</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Total_Billable_Amount__c</fullName>
        <description>Total Amount which is billed to the customer for the work performed.</description>
        <inlineHelpText>Total Amount which is billed to the customer for the work performed.</inlineHelpText>
        <label>Total Billable Amount</label>
        <summarizedField>SVMXC__Service_Order_Line__c.SVMXC__Total_Line_Price__c</summarizedField>
        <summaryFilterItems>
            <field>SVMXC__Service_Order_Line__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Usage/Consumption</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SVMXC__Service_Order_Line__c.SVMXC__Is_Billable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SVMXC__Service_Order_Line__c.SVMXC__Service_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SVMXC__Total_Estimate__c</fullName>
        <description>Total Estimate cost of the work to be performed.</description>
        <inlineHelpText>Total Estimate cost of the work to be performed.</inlineHelpText>
        <label>Total Estimate</label>
        <summarizedField>SVMXC__Service_Order_Line__c.SVMXC__Total_Estimated_Price__c</summarizedField>
        <summaryFilterItems>
            <field>SVMXC__Service_Order_Line__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Estimate</value>
        </summaryFilterItems>
        <summaryForeignKey>SVMXC__Service_Order_Line__c.SVMXC__Service_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>